Colab を使用して作成されました

--- a/pycox_DS2.ipynb
+++ b/pycox_DS2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjt5LReeHci60L5lfoGUrO",
+      "authorship_tag": "ABX9TyM3MqDlSCC9jMUXTLmXEUU+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,35 +40,33 @@
     {
       "cell_type": "code",
       "source": [
-        "#requirements.txtの読み込み\n",
-        "!pip install -r requirements.txt"
+        "!git clone https://github.com/masayasato0407/Pycox_DeepSurv2"
       ],
       "metadata": {
-        "id": "oI7weHO52NXk"
+        "id": "8YR8DfiLAeAK"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "pMTizwhmbxpX"
-      },
-      "outputs": [],
       "source": [
-        "#pycoxのインストール\n",
-        "!pip install pycox"
-      ]
+        "cd Pycox_DeepSurv2"
+      ],
+      "metadata": {
+        "id": "rdpxA0pjA6ji"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#pandasのバージョン変更\n",
-        "!pip install pandas==1.5.3"
+        "#requirements.txtの読み込み\n",
+        "!pip install -r requirements.txt"
       ],
       "metadata": {
-        "id": "ioufVX_PP387"
+        "id": "oI7weHO52NXk"
       },
       "execution_count": null,
       "outputs": []
